# viam-rust-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  build.rs
.github/: CODEOWNERS  license_report.yml
.github/workflows/: checks.yml  license_finder.yml  license_report.yml  release.yml  set_reviewers.yml  update_protos.yml
doc/: dependency_decisions.yml
examples/: Cargo.toml
examples/src/dial/: main.rs
examples/src/dialdirect/: main.rs
examples/src/echo/: main.rs
examples/src/ffi/cpp/: .gitignore  Makefile  buf.gen.yaml  ffi_echo.cc  ffi_robot.cc
proto/rpc/examples/fileupload/v1/: fileupload.proto
proto/rpc/v1/: auth.proto
proto/rpc/webrtc/v1/: grpc.proto  signaling.proto
src/: lib.rs
src/ffi/: dial_ffi.rs  ffi.rs  mod.rs
src/proxy/: grpc_proxy.rs  mod.rs  proxy.rs  uds.rs
src/rpc/: base_channel.rs  base_stream.rs  client_channel.rs  client_stream.rs  dial.rs  mod.rs  webrtc.rs
