[package]
name = "viam"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"]}
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.1.0"
chashmap = "2.2.2"
derivative = "2.2.0"
futures = {version = "0.3", default-features = false, features = ["alloc", "executor"]}
futures-core = "0.3"
futures-util = "0.3"
http = "0.2.7"
http-body = {version = "0.4.4"}
hyper = { version = "0.14.20", features = ["full"]  }
interceptor = "0.8.0"
libc = {version = "0.2"}
log = "0.4.17"
prost = "0.10"
prost-types = "0.10"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.19", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}
tokio-rustls = { version = "0.23.4"}
tonic = {version = "0.7.2",features = [ "tls", "compression", "tls-roots",]}
tower = { version = "0.4" }
tower-http = { version = "0.3.3", features = ["add-extension","auth","propagate-header","set-header","sensitive-headers","trace","compression-gzip"]}
tracing = {version = "0.1.34"}
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
webpki-roots = "0.21.1"
webrtc = "0.5.0"


[build-dependencies]
tonic-build = {version = "0.7.2",features = ["prost", "compression"]}

