[package]
name = "viam"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
prost-types = "0.10"
tonic = {version = "0.7.2",features = [ "tls", "compression", "tls-roots",]}


[build-dependencies]
tonic-build = {version = "0.7.2",features = ["prost", "compression"]}

