[package]
name = "viam"
version = "0.0.17"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/viamrobotics/viam-rust-sdk"
authors = ["Viam, inc. <contact@viam.com>"]

[lib]
crate-type = ["cdylib","lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
tonic = {version = "0.9.2",features = [ "tls", "gzip", "tls-roots",]}


[build-dependencies]
tonic-build = {version = "0.7.2",features = ["prost", "compression"]}

