[package]
edition = "2021"
name = "example"
version = "0.0.1"

[[bin]]
name = "test-dial"
path = "src/dial/main.rs"

[[bin]]
name = "test-echo"
path = "src/echo/main.rs"

[dependencies]
viam = {path = "../"}
anyhow = { version = "1.0", features = ["backtrace"]}
async-stream = "0.3.3"
futures-util = "0.3"
tokio = { version = "1.19", features = [ "rt-multi-thread", "time", "fs", "macros", "net", ] }
tonic = {version = "0.7.2",features = ["tls", "compression", "tls-roots"]}
tower = "0.4.0"
env_logger = "0.9.0"

[patch.crates-io]
# TODO fix this path, let's at a minimum point to a real repo
hyper = { path = "../../../rust/hyper" }

